# w3b2-solana

./: .dockerignore  .env  .gitignore  Anchor.toml  Cargo.toml  DOCKER-QUICKSTART.md  Dockerfile  Dockerfile.backend  Dockerfile.connector  Dockerfile.docs  Dockerfile.example-client  Dockerfile.frontend  Dockerfile.program  Dockerfile.rust.builder  Dockerfile.rust.tester  Dockerfile.validator  INTEGRATION_GUIDE.md  Makefile  README-Docker.md  README.md  TESTING_GUIDE.md  WALLET_MANAGEMENT_GUIDE.md  build_and_deploy.sh  config.docker.toml  config.toml  deploy.sh  docker-compose.debug.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  mkdocs.yml  start-all.sh  start.sh
assets/: Проблемы и их решения.md  Техническое задание_ W3B2_ The Web3-to-Web2 Bridge Protocol.md
docker/: Dockerfile.docs  Dockerfile.rust.builder
docs/: architecture-diagram.md  architecture.md  concepts.md  end-to-end-workflow.md  getting-started.md  index.md  mkdocs.yml  philosophy.md  solana-program.md
docs/api/: connector.md  gateway.md  on-chain.md
docs/architecture/: architecture-diagram.md  concepts.md
docs/examples/: 01-initial-setup.md  02-constructing-the-ed25519-instruction.md  full-flow.md  python.md  rust.md  typescript.md
docs/reference/: connector.md  gateway-api.md  signer.md  solana-program.md  ts-client.md
docs/tutorials/: end-to-end-workflow.md
examples/app/: config.js  grpc.js  index.js  package.json
examples/app/solana/: app.js  bot.js  utils.js
examples/hybrid-social-network-client/: Dockerfile  app.py  generate_grpc_code.py  requirements.txt
examples/python-client/: client.py
examples/rust-chat-simulation/: Cargo.toml  Dockerfile
examples/rust-chat-simulation/src/: main.rs
examples/rust-client/: Cargo.toml
examples/rust-client/src/: main.rs
idl/: w3b2_solana_program.json
proto/: gateway.proto  protocols.proto  types.proto
scripts/: build_and_deploy.sh  docker-dev.sh  docker-start.sh  docker-stop.sh  health-check.sh  run_gateway.sh  run_tests.sh
w3b2-bridge-backend/: .prettierignore  GRPC_README.md  README.md  dev.env  eslint.config.js  jest.config.js  loader.js  package-lock.json  package.json  tsconfig.json
w3b2-bridge-backend/data/events/: evt_1757780775993_joaqojiux.json  evt_1757780813755_4khkxxoxu.json  evt_1757780820358_akbip74o3.json  evt_1757781267949_2yl2xh01x.json  evt_1757781269829_ds2o87lbw.json  evt_1757781332833_hkcb49ilb.json  evt_1757781334257_n61bohois.json  evt_1757781337090_vm4o2wixl.json  evt_1757781337565_r5o66zwc3.json  evt_1757781446456_ckc6hn1xd.json  evt_1757781533340_r089lur0j.json  evt_1757781537574_0er7f2cyf.json  evt_1757781540390_aaezyh7m5.json  evt_1757781721664_81034s1yq.json  evt_1757781723553_cude3gn56.json  evt_1757781725435_5kuwgdpuw.json  evt_1757781725907_qzvmrwf1r.json  evt_1757782236189_0qb54xkj1.json  evt_1757782289082_k804z4d2n.json  evt_1757782293789_eos7wydht.json  evt_1757782298492_ntthrde16.json  evt_1757782298953_zou4bvcgz.json
w3b2-bridge-backend/data/records/: record_1757777112188_t4finklit.json
w3b2-bridge-backend/data/users/: 4EjJRZLhJDWCBcPbvmKevw1fxLMc8g5EYeq2vaograth.json
w3b2-bridge-backend/src/: main.ts
w3b2-bridge-backend/src/examples/: grpcClient.ts
w3b2-bridge-backend/src/middleware/: errorHandler.ts
w3b2-bridge-backend/src/routes/: api.ts
w3b2-bridge-backend/src/services/: databaseService.ts  encryptionService.ts  grpcService.ts  solanaService.ts  websocketService.ts
w3b2-bridge-backend/src/types/: index.ts  (+1 more)
w3b2-bridge-frontend/: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
w3b2-bridge-frontend/public/: index.html  manifest.json
w3b2-bridge-frontend/src/: App.css  App.tsx  index.css  index.ts  index.tsx  main.tsx
w3b2-bridge-program/: Cargo.toml  README.md
w3b2-bridge-program/proto/: gateway.proto  types.proto
w3b2-bridge-program/src/: command.rs  errors.rs  events.rs  instructions.rs  lib.rs  protocols.rs  sm_accounts.rs  state.rs  types.rs
w3b2-bridge-program/tests/: admin.rs  core.rs  user.rs
w3b2-bridge-program/tests/instructions/: admin.rs  mod.rs  user.rs
w3b2-common/: Cargo.toml
w3b2-common/src/: command.rs  lib.rs
w3b2-connector/: Cargo.toml  README.md  build.rs  config.example.toml  config.toml
w3b2-connector/proto/: bridge.proto
w3b2-connector/src/: catchup.rs  client.rs  config.rs  dispatcher.rs  events.rs  lib.rs  listener.rs  live.rs  main.rs  rpc.rs  storage.rs  synchronizer.rs
w3b2-connector/src/workers/: catchup.rs  live.rs  mod.rs  synchronizer.rs
w3b2-connector/tests/: core.rs  program_instructions.rs
w3b2-gateway/: Cargo.toml  build.rs  config.example.toml
w3b2-gateway/src/: config.rs  lib.rs  main.rs  storage.rs
w3b2-gateway/src/grpc/: conversions.rs  mod.rs
w3b2-gateway/tests/: grpc_integration.rs
w3b2-program/: Cargo.toml  README.md
w3b2-program/src/: events.rs  instructions.rs  lib.rs  protocols.rs  state.rs
w3b2-program/tests/: admin.rs  failures.rs  log.rs  user.rs
w3b2-program/tests/instructions/: admin.rs  log.rs  mod.rs  user.rs
w3b2-solana-connector/: Cargo.toml  README.md
w3b2-solana-connector/src/: client.rs  config.rs  dispatcher.rs  events.rs  lib.rs  listener.rs  storage.rs
w3b2-solana-connector/src/workers/: catchup.rs  live.rs  mod.rs
w3b2-solana-connector/tests/: program_instructions.rs
w3b2-solana-gateway/: Cargo.toml  README.md  build.rs  config.example.toml
w3b2-solana-gateway/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  storage.rs
w3b2-solana-gateway/src/grpc/: conversions.rs  mod.rs
w3b2-solana-gateway/tests/: api.rs  grpc_integration.rs
w3b2-solana-logger/: Cargo.toml  README.md
w3b2-solana-logger/src/: logging.rs
w3b2-solana-program/: Cargo.toml  README.md
w3b2-solana-program/src/: errors.rs  events.rs  instructions.rs  lib.rs  protocols.rs  state.rs
w3b2-solana-program/tests/: admin.rs  failures.rs  log.rs  user.rs
w3b2-solana-program/tests/instructions/: admin.rs  log.rs  mod.rs  user.rs
w3b2-solana-signer/: Cargo.toml  README.md
w3b2-solana-signer/src/: ffi.rs  lib.rs
w3b2-solana-signer/tests/: sign.rs
(+32 files in other folders)
