[workspace]
resolver = "2"
members = ["w3b2-program", "w3b2-connector", "w3b2-gateway"]

[workspace.dependencies]
# internal
w3b2-program = { path = "w3b2-program" }
w3b2-connector = { path = "w3b2-connector" }
w3b2-gateway = { path = "w3b2-gateway" }

# external
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
borsh = "0.10.4"

solana-sdk = { version = "2.3.1", features = ["full"] }
solana-message = "2.4.0"
solana-program = "2.3.0"
solana-client = "2.3.9"
solana-rpc-client-api = "2.3.9"
solana-transaction-status = "2.3.9"
litesvm = "0.7.0"

serde = "1.0.219"
bincode = "2.0.1"
anyhow = "1.0.99"
sha2 = "0.10.9"
lazy_static = "1.5.0"
tokio = "1.47.1"
tokio-stream = "0.1.17"
sled = "0.34.7"


[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
