[package]
name = "w3b2-bridge-program"
version = "0.1.0"

# 21 редакция нужна для anchor
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "w3b2_bridge_program"

[dependencies]
w3b2-common.workspace = true
anchor-lang = { workspace = true, features = ["init-if-needed"] }

[dev-dependencies]
solana-sdk.workspace = true
solana-message.workspace = true

litesvm.workspace = true

borsh.workspace = true
sha2.workspace = true
lazy_static.workspace = true

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
