[package]
name = "w3b2-bridge-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "w3b2_bridge_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }

[dev-dependencies]
solana-sdk = { workspace = true, features = ["full"] }
solana-message.workspace = true
solana-program.workspace = true
borsh.workspace = true
# наверно лучше это заюзаем, чтобы не поднимать каждый раз смарт контракт в local solana
litesvm = "0.7.0"

sha2 = "0.10.9"
lazy_static = "1.5.0"
