[package]
name = "w3b2-connector"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang.workspace = true
anyhow.workspace = true
bincode.workspace = true
borsh.workspace = true
serde.workspace = true
sled.workspace = true
solana-client.workspace = true
solana-rpc-client-api.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
w3b2-bridge-program.workspace = true

anchor-client = "0.31.1"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tonic = { version = "0.11", features = ["transport", "codegen"] }

[dev-dependencies]
dirs = "6.0.0"

[build-dependencies]
tonic-build = "0.11"
