[package]
name = "w3b2-connector"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang.workspace = true
anyhow.workspace = true
bincode.workspace = true
borsh.workspace = true
serde = { workspace = true, optional = true }
sled.workspace = true
solana-client.workspace = true
solana-rpc-client-api.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
w3b2-bridge-program.workspace = true

base64 = "0.22.1"
tracing = "0.1.41"
async-trait = "0.1.89"
serde_json = "1.0.145"
dashmap = "6.1.0"
thiserror = "2.0.16"

[dev-dependencies]
dirs = "6.0.0"

[features]
serde = ["dep:serde"]
