[package]
name = "w3b2-connector"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- Internal Workspace Crates ---
w3b2-program.workspace = true

# --- Solana and Anchor ---
anchor-lang.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true

# --- Async and Concurrency ---
async-trait = "0.1.89"
dashmap = "6.1.0"
tokio.workspace = true
tokio-stream.workspace = true

# --- Serialization and Data Handling ---
base64 = "0.22.1"
borsh.workspace = true
serde = { workspace = true, optional = true }

# --- Logging and Tracing ---
tracing = "0.1.41"

# --- Error Handling ---
anyhow.workspace = true

[dev-dependencies]
# --- Utilities ---
dirs = "6.0.0"
sled = { workspace = true }

[features]
serde = ["dep:serde"]
