[package]
name = "w3b2-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { workspace = true, features = ["serde"] }
anyhow.workspace = true
async-trait = "0.1.89"
clap = { version = "4.5.48", features = ["derive"] }
config = { version = "0.15.18", features = ["toml"] }
prost = "0.12"
serde.workspace = true
serde_json = "1.0.145"
sled.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic = "0.11"
tracing = "0.1.41"
w3b2-connector = { workspace = true, features = ["serde"] }
thiserror = "2.0.17"
tracing-subscriber = { version = "0.3.20", features = ["json"] }
[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
w3b2-bridge-program = { path = "../w3b2-bridge-program" }
portpicker = "0.1.1"
tempfile = "3.10.1"
solana-transaction-status.workspace = true
anchor-lang.workspace = true
solana-program-test = "2.2.1"
