[package]
name = "w3b2-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "w3b2_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
# --- Anchor Framework ---
anchor-lang = { workspace = true, features = ["init-if-needed"] }

[dev-dependencies]
# --- Solana ---
solana-program.workspace = true
solana-sdk = { workspace = true, features = ["full"] }
solana-message.workspace = true

# --- Testing & Simulation ---
litesvm = "0.7.0"
base64 = "0.22.1"
# --- Serialization & Hashing ---
borsh.workspace = true
sha2 = "0.10.9"

# --- Error Handling & Utilities ---
anyhow.workspace = true
lazy_static = "1.5.0"
