[package]
name = "w3b2-solana-connector"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- Internal Workspace Crates ---
w3b2-solana-program.workspace = true

# --- Solana and Anchor ---
anchor-lang.workspace = true
solana-client.workspace = true
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
solana-ed25519-program = { workspace = true }

# --- Async and Concurrency ---
async-trait = { workspace = true }
tokio.workspace = true
tokio-stream.workspace = true
futures = { workspace = true }

# --- Serialization and Data Handling ---
base64 = { workspace = true }
serde = { workspace = true, optional = true }
bincode = { workspace = true, features = ["serde"] }

# --- Logging and Tracing ---
tracing = { workspace = true }

# --- Error Handling ---
anyhow = { workspace = true }

[dev-dependencies]
prost.workspace  =true 
# --- Utilities ---
chrono = "0.4"
dirs = "6.0.0"
solana-program-test = { workspace = true }
solana-rpc-client-api = { workspace = true }
sled = { workspace = true }
solana-system-interface = { version = "1.0.0", features = ["bincode"] }

[features]
serde = ["dep:serde"]
