[package]
name = "rust-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = "0.31.1"
solana-sdk = "1.18.26"
solana-program = "1.18.26"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.75"
thiserror = "1.0.50"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.5.1"
chrono = "0.4"
solana-ed25519-program = "2.2.3"
w3b2-solana-program = { path = "../../w3b2-solana-program", features = ["cpi"] }